compiler/testData/diagnostics/tests/multiplatform/checkNoActualForExpectInLastModule.kt
// MUTE_EXPECT_ACTUAL_CLASSES_WARNING
// ISSUE: KT-58483
// MODULE: jvm
// FILE: jvm.kt
expect class <!NO_ACTUAL_FOR_EXPECT!>A<!>
